super-app/deployment/super-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: YOUR_IMAGE_URL/sample-app:latest
        ports:
        - containerPort: 8080
        # Add environment variables or other configurations as needed
